# bitzal-sdk-docs

./: Cargo.toml  LICENSE  README.md  SCRIPT.md  all.html  crates.js  index.html  pinegrow.json  sidebar-items.js  theme.css
bitzal_sdk/: index.html  sidebar-items.js
bitzal_sdk/bitzal/: index.html
bitzal_sdk/cumulus/: index.html
bitzal_sdk/frame_runtime/: index.html  sidebar-items.js
bitzal_sdk/frame_runtime/pallet/: enum.Call.html  enum.Event.html  index.html  sidebar-items.js  struct.Pallet.html  trait.Config.html  type.Module.html  type.Value.html
bitzal_sdk/frame_runtime/runtime/: enum.OriginCaller.html  enum.RuntimeCall.html  enum.RuntimeError.html  enum.RuntimeEvent.html  enum.RuntimeFreezeReason.html  enum.RuntimeHoldReason.html  enum.RuntimeLockId.html  enum.RuntimeSlashReason.html  enum.RuntimeTask.html  index.html  sidebar-items.js  struct.PalletInfo.html  struct.Runtime.html  struct.RuntimeGenesisConfig.html  struct.RuntimeOrigin.html  type.AllPalletsWithSystem.html  type.AllPalletsWithoutSystem.html  type.Example.html  type.System.html  type.SystemConfig.html
bitzal_sdk/smart_contracts/: index.html
bitzal_sdk/substrate/: index.html
bitzal_sdk/templates/: index.html
bitzal_sdk/xcm/: index.html
guides/: index.html  sidebar-items.js
guides/async_backing_guide/: index.html
guides/enable_elastic_scaling_mvp/: index.html
guides/enable_metadata_hash/: index.html
guides/enable_pov_reclaim/: index.html
guides/your_first_pallet/: index.html  sidebar-items.js
guides/your_first_pallet/pallet/: enum.Call.html  index.html  sidebar-items.js  struct.Pallet.html  trait.Config.html  type.Balance.html  type.Balances.html  type.Module.html  type.TotalIssuance.html
guides/your_first_pallet/pallet_v2/: enum.Call.html  enum.Error.html  enum.Event.html  index.html  sidebar-items.js  struct.Pallet.html  trait.Config.html  type.Balances.html  type.Module.html  type.TotalIssuance.html
guides/your_first_pallet/shell_pallet/: enum.Call.html  index.html  struct.Pallet.html  trait.Config.html  type.Module.html
guides/your_first_runtime/: index.html
meta_contributing/: index.html
reference_docs/: index.html  sidebar-items.js
reference_docs/blockchain_state_machines/: index.html
reference_docs/chain_spec_genesis/: index.html
reference_docs/cli/: index.html
reference_docs/custom_host_functions/: index.html
reference_docs/custom_runtime_api_rpc/: index.html
reference_docs/defensive_programming/: index.html
reference_docs/development_environment_advice/: index.html
reference_docs/extrinsic_encoding/: index.html
reference_docs/extrinsic_encoding/call_data/: enum.Call.html  enum.PalletACall.html  enum.PalletBCall.html  index.html  sidebar-items.js
reference_docs/extrinsic_encoding/encoding_example/: fn.encode_demo_extrinsic.html  index.html
reference_docs/fee_less_runtime/: index.html
reference_docs/frame_benchmarking_weight/: index.html
reference_docs/frame_logging/: index.html
reference_docs/frame_offchain_workers/: index.html
reference_docs/frame_origin/: index.html  sidebar-items.js
reference_docs/frame_origin/pallet_for_origin/: enum.Call.html  index.html  struct.Pallet.html  trait.Config.html  type.Module.html
reference_docs/frame_origin/pallet_with_custom_origin/: enum.Call.html  enum.Origin.html  index.html  struct.Pallet.html  trait.Config.html  type.Module.html
reference_docs/frame_origin/pallet_with_external_origin/: enum.Call.html  index.html  struct.Pallet.html  trait.Config.html  type.Module.html
reference_docs/frame_origin/runtime_for_external_origin/: enum.OriginCaller.html  enum.RuntimeCall.html  enum.RuntimeError.html  enum.RuntimeEvent.html  enum.RuntimeFreezeReason.html  enum.RuntimeHoldReason.html  enum.RuntimeLockId.html  enum.RuntimeSlashReason.html  enum.RuntimeTask.html  index.html  sidebar-items.js  struct.PalletInfo.html  struct.Runtime.html  struct.RuntimeGenesisConfig.html  struct.RuntimeOrigin.html  type.AllPalletsWithSystem.html  type.AllPalletsWithoutSystem.html  type.PalletWithExternalOrigin.html  type.System.html  type.SystemConfig.html
reference_docs/frame_origin/runtime_for_origin/: enum.OriginCaller.html  enum.RuntimeCall.html  enum.RuntimeError.html  enum.RuntimeEvent.html  enum.RuntimeFreezeReason.html  enum.RuntimeHoldReason.html  enum.RuntimeLockId.html  enum.RuntimeSlashReason.html  enum.RuntimeTask.html  index.html  sidebar-items.js  struct.PalletInfo.html  struct.Runtime.html  struct.RuntimeGenesisConfig.html  struct.RuntimeOrigin.html  type.AllPalletsWithSystem.html  type.AllPalletsWithoutSystem.html  type.System.html  (+2 more)
reference_docs/frame_pallet_coupling/: index.html  sidebar-items.js  struct.OtherAuthorProvider.html  trait.AuthorProvider.html
reference_docs/frame_runtime_types/: index.html  sidebar-items.js
reference_docs/frame_runtime_upgrades_and_migrations/: index.html
reference_docs/frame_storage_derives/: index.html
reference_docs/frame_system_accounts/: index.html
reference_docs/frame_tokens/: index.html
reference_docs/glossary/: index.html
reference_docs/metadata/: index.html
reference_docs/runtime_vs_smart_contract/: index.html
reference_docs/signed_extensions/: index.html
reference_docs/trait_based_programming/: index.html
reference_docs/umbrella_crate/: index.html
reference_docs/wasm_meta_protocol/: index.html
staging/node/: Cargo.toml  build.rs
staging/node/src/: chain_spec.rs  cli.rs  command.rs  lib.rs  main.rs  rpc.rs  service.rs
staging/pallets/: Cargo.toml
staging/runtime/: Cargo.toml
staging/runtime/src/: lib.rs
tutorial/node/: Cargo.toml
tutorial/step-0/: README.md
tutorial/step-0/pallets/: Cargo.toml
tutorial/step-0/pallets/src/: currency.rs
tutorial/step-1/: README.md
tutorial/step-2/: README.md
tutorial/step-3/: README.md
tutorial/step-3/runtime/: Cargo.toml
tutorial/step-3/runtime/src/: lib.rs
tutorial/step-4/: README.md  dev.json
tutorial/step-5/: README.md  dev.json
tutorial/step-5/runtime/: Cargo.toml  build.rs
tutorial/step-5/runtime/src/: lib.rs
tutorial/step-6/: README.md  dev.json
(+213 files in other folders)
