[workspace]
resolver = "2"

members = [
	# all staging crates.
	"staging/pallets",
	"staging/ink",
	"staging/runtime",
	"staging/node",

	# all tutorial steps
	# "tutorial/node",

	# "tutorial/step-0/pallets",
	# "tutorial/step-1/pallets",
	# "tutorial/step-2/pallets",

	# "tutorial/step-3/pallets",
	# "tutorial/step-3/runtime",

	# "tutorial/step-4/pallets",
	# "tutorial/step-4/runtime",

	# "tutorial/step-5/pallets",
	# "tutorial/step-5/runtime",

	# "tutorial/step-6/pallets",
	# "tutorial/step-6/runtime",
]

[patch."https://github.com/bitzaldot/bitzal-sdk"]
bridge-runtime-common = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/bin/runtime-common" }
bp-header-chain = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/primitives/header-chain" }
bp-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/primitives/runtime" }
frame-support = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/support" }
frame-support-procedural = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/support/procedural" }
frame-support-procedural-tools = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/support/procedural/tools" }
frame-support-procedural-tools-derive = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/support/procedural/tools/derive" }
sp-api = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/api" }
sp-api-proc-macro = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/api/proc-macro" }
sp-core = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/core" }
sp-core-hashing = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/core/hashing" }
sp-debug-derive = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/debug-derive" }
sp-externalities = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/externalities" }
sp-std = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/std" }
sp-storage = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/storage" }
sp-runtime-interface = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/runtime-interface" }
sp-runtime-interface-proc-macro = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/runtime-interface/proc-macro" }
sp-tracing = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/tracing" }
sp-wasm-interface = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/wasm-interface" }
sp-io = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/io" }
sp-keystore = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/keystore" }
sp-state-machine = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/state-machine" }
sp-panic-handler = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/panic-handler" }
sp-trie = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/trie" }
sp-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/runtime" }
sp-application-crypto = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/application-crypto" }
sp-arithmetic = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/arithmetic" }
sp-weights = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/weights" }
substrate-test-runtime-client = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/test-utils/runtime/client" }
sc-block-builder = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/block-builder" }
sc-client-api = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/api" }
substrate-prometheus-endpoint = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/utils/prometheus" }
sc-executor = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/executor" }
sc-executor-common = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/executor/common" }
sc-allocator = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/allocator" }
sp-maybe-compressed-blob = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/maybe-compressed-blob" }
sc-executor-wasmtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/executor/wasmtime" }
sc-runtime-test = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/executor/runtime-test" }
substrate-wasm-builder = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/utils/wasm-builder" }
sp-version = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/version" }
sp-core-hashing-proc-macro = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/core/hashing/proc-macro" }
sp-version-proc-macro = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/version/proc-macro" }
sc-tracing = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/tracing" }
sc-tracing-proc-macro = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/tracing/proc-macro" }
sp-blockchain = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/blockchain" }
sp-consensus = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/consensus/common" }
sp-inherents = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/inherents" }
sp-test-primitives = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/test-primitives" }
sp-database = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/database" }
sp-rpc = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/rpc" }
substrate-test-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/test-utils/runtime" }
frame-executive = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/executive" }
frame-system = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/system" }
frame-try-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/try-runtime" }
pallet-balances = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/balances" }
frame-benchmarking = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/benchmarking" }
pallet-transaction-payment = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/transaction-payment" }
frame-system-rpc-runtime-api = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/system/rpc/runtime-api" }
pallet-babe = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/babe" }
pallet-authorship = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/authorship" }
pallet-session = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/session" }
pallet-timestamp = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/timestamp" }
sp-timestamp = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/timestamp" }
sp-session = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/session" }
sp-staking = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/staking" }
sp-consensus-babe = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/consensus/babe" }
sp-consensus-slots = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/consensus/slots" }
frame-election-provider-support = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/election-provider-support" }
frame-election-provider-solution-type = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/election-provider-support/solution-type" }
sp-npos-elections = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/npos-elections" }
substrate-test-utils = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/test-utils" }
sc-service = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/service" }
sc-chain-spec = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/chain-spec" }
sc-chain-spec-derive = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/chain-spec/derive" }
sc-network = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/network" }
sc-network-common = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/network/common" }
sc-consensus = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/consensus/common" }
sc-utils = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/utils" }
sp-consensus-grandpa = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/consensus/grandpa" }
sc-network-light = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/network/light" }
sc-network-sync = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/network/sync" }
fork-tree = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/utils/fork-tree" }
sc-telemetry = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/telemetry" }
sc-client-db = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/db" }
sc-state-db = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/state-db" }
kitchensink-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/bin/node/runtime" }
frame-benchmarking-pallet-pov = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/benchmarking/pov" }
frame-system-benchmarking = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/system/benchmarking" }
node-primitives = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/bin/node/primitives" }
pallet-alliance = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/alliance" }
pallet-collective = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/collective" }
pallet-identity = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/identity" }
pallet-asset-conversion = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/asset-conversion" }
pallet-assets = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/assets" }
pallet-asset-conversion-tx-payment = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/transaction-payment/asset-conversion-tx-payment" }
pallet-asset-rate = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/asset-rate" }
pallet-asset-tx-payment = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/transaction-payment/asset-tx-payment" }
pallet-authority-discovery = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/authority-discovery" }
sp-authority-discovery = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/authority-discovery" }
pallet-bags-list = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/bags-list" }
pallet-bounties = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/bounties" }
pallet-treasury = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/treasury" }
pallet-utility = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/utility" }
pallet-root-testing = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/root-testing" }
pallet-broker = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/broker" }
pallet-child-bounties = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/child-bounties" }
pallet-contracts = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/contracts" }
pallet-contracts-primitives = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/contracts/primitives" }
pallet-contracts-proc-macro = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/contracts/proc-macro" }
pallet-insecure-randomness-collective-flip = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/insecure-randomness-collective-flip" }
pallet-proxy = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/proxy" }
pallet-conviction-voting = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/conviction-voting" }
pallet-scheduler = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/scheduler" }
pallet-preimage = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/preimage" }
pallet-core-fellowship = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/core-fellowship" }
pallet-democracy = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/democracy" }
pallet-election-provider-multi-phase = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/election-provider-multi-phase" }
pallet-election-provider-support-benchmarking = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/election-provider-support/benchmarking" }
pallet-elections-phragmen = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/elections-phragmen" }
pallet-fast-unstake = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/fast-unstake" }
pallet-staking = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/staking" }
pallet-staking-reward-curve = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/staking/reward-curve" }
pallet-glutton = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/glutton" }
pallet-grandpa = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/grandpa" }
pallet-offences = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/offences" }
sp-keyring = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/keyring" }
pallet-im-online = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/im-online" }
pallet-indices = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/indices" }
pallet-lottery = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/lottery" }
frame-support-test = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/support/test" }
sp-metadata-ir = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/metadata-ir" }
frame-support-test-pallet = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/support/test/pallet" }
pallet-membership = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/membership" }
pallet-message-queue = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/message-queue" }
pallet-mmr = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/merkle-mountain-range" }
sp-mmr-primitives = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/merkle-mountain-range" }
pallet-multisig = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/multisig" }
pallet-nft-fractionalization = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/nft-fractionalization" }
pallet-nfts = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/nfts" }
pallet-nfts-runtime-api = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/nfts/runtime-api" }
pallet-nis = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/nis" }
pallet-nomination-pools = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/nomination-pools" }
pallet-nomination-pools-benchmarking = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/nomination-pools/benchmarking" }
pallet-nomination-pools-runtime-api = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/nomination-pools/runtime-api" }
pallet-offences-benchmarking = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/offences/benchmarking" }
pallet-ranked-collective = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/ranked-collective" }
pallet-recovery = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/recovery" }
pallet-referenda = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/referenda" }
pallet-remark = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/remark" }
pallet-safe-mode = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/safe-mode" }
pallet-salary = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/salary" }
pallet-session-benchmarking = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/session/benchmarking" }
pallet-society = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/society" }
pallet-staking-runtime-api = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/staking/runtime-api" }
pallet-state-trie-migration = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/state-trie-migration" }
frame-remote-externalities = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/utils/frame/remote-externalities" }
substrate-rpc-client = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/utils/frame/rpc/client" }
sc-rpc-api = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/rpc-api" }
sc-transaction-pool-api = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/transaction-pool/api" }
substrate-state-trie-migration-rpc = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/utils/frame/rpc/state-trie-migration-rpc" }
pallet-statement = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/statement" }
sp-statement-store = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/statement-store" }
pallet-sudo = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/sudo" }
pallet-tips = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/tips" }
pallet-transaction-payment-rpc-runtime-api = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/transaction-payment/rpc/runtime-api" }
pallet-transaction-storage = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/transaction-storage" }
sp-transaction-storage-proof = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/transaction-storage-proof" }
pallet-tx-pause = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/tx-pause" }
pallet-uniques = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/uniques" }
pallet-vesting = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/vesting" }
pallet-whitelist = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/whitelist" }
sp-block-builder = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/block-builder" }
sp-offchain = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/offchain" }
sp-transaction-pool = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/transaction-pool" }
sc-informant = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/informant" }
sc-keystore = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/keystore" }
sc-network-bitswap = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/network/bitswap" }
sc-network-transactions = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/network/transactions" }
sc-rpc = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/rpc" }
sc-transaction-pool = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/transaction-pool" }
substrate-test-runtime-transaction-pool = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/test-utils/runtime/transaction-pool" }
sc-rpc-server = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/rpc-servers" }
sc-rpc-spec-v2 = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/rpc-spec-v2" }
sc-sysinfo = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/sysinfo" }
sp-consensus-aura = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/consensus/aura" }
sp-genesis-builder = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/genesis-builder" }
substrate-test-client = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/test-utils/client" }
sc-offchain = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/offchain" }
sp-runtime-interface-test-wasm = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/runtime-interface/test-wasm" }
bp-test-utils = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/primitives/test-utils" }
bp-parachains = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/primitives/parachains" }
bp-bitzal-core = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/primitives/bitzal-core" }
bp-messages = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/primitives/messages" }
bp-relayers = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/primitives/relayers" }
bp-xcm-bridge-hub-router = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/primitives/xcm-bridge-hub-router" }
pallet-bridge-grandpa = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/modules/grandpa" }
pallet-bridge-messages = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/modules/messages" }
pallet-bridge-parachains = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/modules/parachains" }
pallet-bridge-relayers = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/modules/relayers" }
staging-xcm = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/xcm" }
xcm-procedural = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/xcm/procedural" }
staging-xcm-builder = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/xcm/xcm-builder" }
bitzal-parachain-primitives = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/parachain" }
bitzal-core-primitives = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/core-primitives" }
staging-xcm-executor = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/xcm/xcm-executor" }
pallet-xcm = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/xcm/pallet-xcm" }
bitzal-runtime-parachains = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/runtime/parachains" }
bitzal-runtime-metrics = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/runtime/metrics" }
bitzal-primitives = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/primitives" }
bitzal-primitives-test-helpers = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/primitives/test-helpers" }
bitzal-test-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/runtime/test-runtime" }
sp-consensus-beefy = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/consensus/beefy" }
bitzal-runtime-common = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/runtime/common" }
pallet-staking-reward-fn = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/staking/reward-fn" }
slot-range-helper = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/runtime/common/slot_range_helper" }
test-runtime-constants = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/runtime/test-runtime/constants" }
pallet-xcm-bridge-hub-router = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/modules/xcm-bridge-hub-router" }
bp-asset-hub-kusama = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/primitives/chain-asset-hub-kusama" }
bp-asset-hub-bitzal = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/primitives/chain-asset-hub-bitzal" }
bp-bridge-hub-cumulus = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/primitives/chain-bridge-hub-cumulus" }
bp-bridge-hub-kusama = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/primitives/chain-bridge-hub-kusama" }
bp-bridge-hub-bitzal = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/primitives/chain-bridge-hub-bitzal" }
bp-bridge-hub-rococo = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/primitives/chain-bridge-hub-rococo" }
bp-bridge-hub-wococo = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/primitives/chain-bridge-hub-wococo" }
bp-kusama = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/primitives/chain-kusama" }
bp-bitzal = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/primitives/chain-bitzal" }
bp-rococo = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/primitives/chain-rococo" }
bp-wococo = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bridges/primitives/chain-wococo" }
cumulus-client-cli = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/client/cli" }
sc-cli = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/cli" }
cumulus-client-collator = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/client/collator" }
cumulus-client-consensus-common = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/client/consensus/common" }
cumulus-client-pov-recovery = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/client/pov-recovery" }
cumulus-primitives-core = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/primitives/core" }
cumulus-relay-chain-interface = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/client/relay-chain-interface" }
bitzal-overseer = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/overseer" }
tracing-gum = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/gum" }
tracing-gum-proc-macro = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/gum/proc-macro" }
bitzal-node-jaeger = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/jaeger" }
bitzal-node-primitives = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/primitives" }
bitzal-erasure-coding = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/erasure-coding" }
bitzal-node-metrics = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/metrics" }
bitzal-test-service = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/test/service" }
sc-consensus-babe = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/consensus/babe" }
sc-consensus-epochs = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/consensus/epochs" }
sc-consensus-slots = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/consensus/slots" }
sc-network-test = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/network/test" }
sc-consensus-grandpa = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/consensus/grandpa" }
sc-network-gossip = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/network-gossip" }
bitzal-node-subsystem = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/subsystem" }
bitzal-node-subsystem-types = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/subsystem-types" }
bitzal-node-network-protocol = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/network/protocol" }
sc-authority-discovery = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/authority-discovery" }
bitzal-statement-table = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/statement-table" }
bitzal-rpc = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/rpc" }
substrate-frame-rpc-system = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/utils/frame/rpc/system" }
mmr-rpc = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/merkle-mountain-range/rpc" }
pallet-transaction-payment-rpc = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/transaction-payment/rpc" }
sc-consensus-babe-rpc = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/consensus/babe/rpc" }
sc-consensus-beefy = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/consensus/beefy" }
sc-consensus-beefy-rpc = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/consensus/beefy/rpc" }
sc-consensus-grandpa-rpc = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/consensus/grandpa/rpc" }
sc-sync-state-rpc = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/sync-state-rpc" }
bitzal-service = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/service" }
frame-benchmarking-cli = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/utils/frame/benchmarking-cli" }
mmr-gadget = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/merkle-mountain-range" }
bitzal-approval-distribution = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/network/approval-distribution" }
bitzal-node-subsystem-util = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/subsystem-util" }
bitzal-node-subsystem-test-helpers = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/subsystem-test-helpers" }
bitzal-availability-bitfield-distribution = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/network/bitfield-distribution" }
bitzal-availability-distribution = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/network/availability-distribution" }
bitzal-availability-recovery = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/network/availability-recovery" }
bitzal-collator-protocol = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/network/collator-protocol" }
bitzal-dispute-distribution = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/network/dispute-distribution" }
bitzal-gossip-support = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/network/gossip-support" }
bitzal-network-bridge = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/network/bridge" }
bitzal-node-collation-generation = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/collation-generation" }
bitzal-node-core-approval-voting = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/core/approval-voting" }
bitzal-node-core-av-store = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/core/av-store" }
bitzal-node-core-backing = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/core/backing" }
bitzal-node-core-bitfield-signing = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/core/bitfield-signing" }
bitzal-node-core-candidate-validation = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/core/candidate-validation" }
bitzal-node-core-pvf = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/core/pvf" }
bitzal-node-core-pvf-common = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/core/pvf/common" }
bitzal-node-core-pvf-execute-worker = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/core/pvf/execute-worker" }
bitzal-node-core-pvf-prepare-worker = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/core/pvf/prepare-worker" }
test-parachain-adder = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/parachain/test-parachains/adder" }
test-parachain-halt = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/parachain/test-parachains/halt" }
substrate-build-script-utils = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/utils/build-script-utils" }
bitzal-node-core-chain-api = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/core/chain-api" }
bitzal-node-core-chain-selection = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/core/chain-selection" }
bitzal-node-core-dispute-coordinator = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/core/dispute-coordinator" }
bitzal-node-core-parachains-inherent = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/core/parachains-inherent" }
bitzal-node-core-prospective-parachains = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/core/prospective-parachains" }
bitzal-node-core-provisioner = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/core/provisioner" }
bitzal-node-core-pvf-checker = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/core/pvf-checker" }
bitzal-node-core-runtime-api = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/core/runtime-api" }
bitzal-statement-distribution = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/network/statement-distribution" }
rococo-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/runtime/rococo" }
binary-merkle-tree = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/utils/binary-merkle-tree" }
pallet-beefy = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/beefy" }
pallet-beefy-mmr = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/beefy-mmr" }
pallet-xcm-benchmarks = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/xcm/pallet-xcm-benchmarks" }
rococo-runtime-constants = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/runtime/rococo/constants" }
sc-basic-authorship = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/basic-authorship" }
sc-proposer-metrics = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/proposer-metrics" }
westend-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/runtime/westend" }
westend-runtime-constants = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/runtime/westend/constants" }
bitzal-test-client = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/test/client" }
cumulus-test-service = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/test/service" }
cumulus-client-consensus-relay-chain = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/client/consensus/relay-chain" }
cumulus-client-service = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/client/service" }
cumulus-client-network = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/client/network" }
cumulus-relay-chain-inprocess-interface = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/client/relay-chain-inprocess-interface" }
bitzal-cli = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/cli" }
bitzal-performance-test = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/test/performance-test" }
staging-kusama-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/runtime/kusama" }
kusama-runtime-constants = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/runtime/kusama/constants" }
sc-storage-monitor = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/storage-monitor" }
try-runtime-cli = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/utils/frame/try-runtime/cli" }
substrate-cli-test-utils = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/test-utils/cli" }
node-cli = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/bin/node/cli" }
node-executor = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/bin/node/executor" }
node-testing = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/bin/node/testing" }
node-inspect = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/bin/node/inspect" }
node-rpc = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/bin/node/rpc" }
sc-network-statement = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/network/statement" }
sc-statement-store = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/statement-store" }
sc-service-test = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/service/test" }
substrate-frame-cli = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/utils/frame/frame-utilities-cli" }
cumulus-relay-chain-minimal-node = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/client/relay-chain-minimal-node" }
cumulus-relay-chain-rpc-interface = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/client/relay-chain-rpc-interface" }
cumulus-pallet-parachain-system = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/pallets/parachain-system" }
cumulus-pallet-parachain-system-proc-macro = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/pallets/parachain-system/proc-macro" }
cumulus-primitives-parachain-inherent = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/primitives/parachain-inherent" }
cumulus-test-relay-sproof-builder = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/test/relay-sproof-builder" }
cumulus-test-client = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/test/client" }
cumulus-test-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/test/runtime" }
parachains-common = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/parachains/common" }
cumulus-primitives-utility = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/primitives/utility" }
pallet-collator-selection = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/pallets/collator-selection" }
pallet-aura = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/aura" }
bitzal-runtime-constants = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/runtime/bitzal/constants" }
rococo-parachain-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/parachains/runtimes/testing/rococo-parachain" }
cumulus-pallet-aura-ext = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/pallets/aura-ext" }
cumulus-pallet-dmp-queue = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/pallets/dmp-queue" }
cumulus-pallet-xcm = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/pallets/xcm" }
cumulus-pallet-xcmp-queue = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/pallets/xcmp-queue" }
cumulus-ping = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/parachains/pallets/ping" }
parachain-info = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/parachains/pallets/parachain-info" }
cumulus-client-consensus-aura = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/client/consensus/aura" }
cumulus-client-consensus-proposer = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/client/consensus/proposer" }
cumulus-primitives-aura = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/primitives/aura" }
sc-consensus-aura = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/consensus/aura" }
cumulus-pallet-session-benchmarking = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/pallets/session-benchmarking" }
cumulus-pallet-solo-to-para = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/pallets/solo-to-para" }
parachain-template-node = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/parachain-template/node" }
parachain-template-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/parachain-template/runtime" }
pallet-parachain-template = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/parachain-template/pallets/template" }
asset-hub-kusama-integration-tests = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/parachains/integration-tests/emulated/assets/asset-hub-kusama" }
asset-hub-kusama-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/parachains/runtimes/assets/asset-hub-kusama" }
assets-common = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/parachains/runtimes/assets/common" }
asset-test-utils = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/parachains/runtimes/assets/test-utils" }
parachains-runtimes-test-utils = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/parachains/runtimes/test-utils" }
integration-tests-common = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/parachains/integration-tests/emulated/common" }
asset-hub-bitzal-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/parachains/runtimes/assets/asset-hub-bitzal" }
asset-hub-westend-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/parachains/runtimes/assets/asset-hub-westend" }
bridge-hub-kusama-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/parachains/runtimes/bridge-hubs/bridge-hub-kusama" }
bridge-hub-test-utils = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/parachains/runtimes/bridge-hubs/test-utils" }
bridge-hub-bitzal-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/parachains/runtimes/bridge-hubs/bridge-hub-bitzal" }
bridge-hub-rococo-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/parachains/runtimes/bridge-hubs/bridge-hub-rococo" }
collectives-bitzal-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/parachains/runtimes/collectives/collectives-bitzal" }
penpal-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/parachains/runtimes/testing/penpal" }
bitzal-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/runtime/bitzal" }
xcm-emulator = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/xcm/xcm-emulator" }
asset-hub-bitzal-integration-tests = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/parachains/integration-tests/emulated/assets/asset-hub-bitzal" }
asset-hub-westend-integration-tests = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/parachains/integration-tests/emulated/assets/asset-hub-westend" }
bridge-hub-rococo-integration-tests = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/parachains/integration-tests/emulated/bridges/bridge-hub-rococo" }
collectives-bitzal-integration-tests = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/parachains/integration-tests/emulated/collectives/collectives-bitzal" }
contracts-rococo-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/parachains/runtimes/contracts/contracts-rococo" }
glutton-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/parachains/runtimes/glutton/glutton-kusama" }
cumulus-primitives-timestamp = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/primitives/timestamp" }
seedling-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/parachains/runtimes/starters/seedling" }
shell-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/parachains/runtimes/starters/shell" }
bitzal-parachain-bin = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/cumulus/bitzal-parachain" }
bitzal = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal" }
erasure_coding_fuzzer = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/erasure-coding/fuzzer" }
bitzal-test-malus = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/malus" }
zombienet-backchannel = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/node/zombienet-backchannel" }
test-parachains = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/parachain/test-parachains" }
test-parachain-adder-collator = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/parachain/test-parachains/adder/collator" }
test-parachain-undying = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/parachain/test-parachains/undying" }
test-parachain-undying-collator = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/parachain/test-parachains/undying/collator" }
bitzal-voter-bags = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/utils/generate-bags" }
generate-bags = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/utils/frame/generate-bags" }
remote-ext-tests-bags-list = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/utils/remote-ext-tests/bags-list" }
pallet-bags-list-remote-tests = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/bags-list/remote-tests" }
xcm-executor-integration-tests = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/xcm/xcm-executor/integration-tests" }
xcm-simulator = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/xcm/xcm-simulator" }
xcm-simulator-example = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/xcm/xcm-simulator/example" }
xcm-simulator-fuzzer = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/bitzal/xcm/xcm-simulator/fuzzer" }
minimal-node = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/bin/minimal/node" }
frame = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame" }
pallet-examples = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/examples" }
pallet-default-config-example = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/examples/default-config" }
pallet-dev-mode = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/examples/dev-mode" }
pallet-example-basic = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/examples/basic" }
pallet-example-frame-crate = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/examples/frame-crate" }
pallet-example-kitchensink = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/examples/kitchensink" }
pallet-example-offchain-worker = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/examples/offchain-worker" }
pallet-example-split = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/examples/split" }
minimal-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/bin/minimal/runtime" }
sc-consensus-manual-seal = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/consensus/manual-seal" }
node-bench = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/bin/node/bench" }
node-template = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/bin/node-template/node" }
node-template-runtime = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/bin/node-template/runtime" }
pallet-template = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/bin/node-template/pallets/template" }
chain-spec-builder = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/bin/utils/chain-spec-builder" }
subkey = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/bin/utils/subkey" }
sc-consensus-pow = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/client/consensus/pow" }
sp-consensus-pow = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/consensus/pow" }
pallet-atomic-swap = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/atomic-swap" }
pallet-bags-list-fuzzer = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/bags-list/fuzzer" }
pallet-election-provider-e2e-test = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/election-provider-multi-phase/test-staking-e2e" }
frame-election-solution-type-fuzzer = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/election-provider-support/solution-type/fuzzer" }
pallet-nicks = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/nicks" }
pallet-node-authorization = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/node-authorization" }
pallet-nomination-pools-fuzzer = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/nomination-pools/fuzzer" }
pallet-nomination-pools-test-staking = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/nomination-pools/test-staking" }
pallet-paged-list = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/paged-list" }
pallet-paged-list-fuzzer = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/paged-list/fuzzer" }
pallet-root-offences = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/root-offences" }
pallet-scored-pool = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/scored-pool" }
frame-support-test-compile-pass = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/frame/support/test/compile_pass" }
sp-api-test = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/api/test" }
sp-application-crypto-test = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/application-crypto/test" }
sp-arithmetic-fuzzer = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/arithmetic/fuzzer" }
sp-consensus-sassafras = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/consensus/sassafras" }
sp-crypto-ec-utils = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/crypto/ec-utils" }
sp-npos-elections-fuzzer = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/npos-elections/fuzzer" }
sp-runtime-interface-test = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/runtime-interface/test" }
sp-runtime-interface-test-wasm-deprecated = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/primitives/runtime-interface/test-wasm-deprecated" }
node-template-release = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/scripts/ci/node-template-release" }
node-runtime-generate-bags = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/utils/frame/generate-bags/node-runtime" }
substrate-frame-rpc-support = { path = "/Users/kianenigma/Desktop/Gsb/bitzal-sdk/substrate/utils/frame/rpc/support" }
